| Bug #43108 | ndbmtd - online add node fails | ||
|---|---|---|---|
| Submitted: | 23 Feb 14:27 | Modified: | 14 Mar 13:42 |
| Reporter: | Johan Andersson | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.4 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
| Tags: | online add node, ndbmtd | ||
[23 Feb 14:27]
Johan Andersson
[23 Feb 14:32]
Johan Andersson
trace files ftp://ftp.mysql.com/pub/mysql/upload/ndb_error_report_20090223141128.tar.bz2
[12 Mar 7:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/68994 2934 Jonas Oreland 2009-03-12 ndb - bug#43108 - part I - remove LocalProxy::Node, send LCP_*_REP using local DIH instead
[12 Mar 7:53]
Bugs System
Pushed into 5.1.32-ndb-7.0.4 (revid:jonas@mysql.com-20090312065239-3exz40e2dnn5y5lb) (version source revid:jonas@mysql.com-20090312065239-3exz40e2dnn5y5lb) (merge vers: 5.1.32-ndb-7.0.4) (pib:6)
[13 Mar 8:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/69093 2937 Jonas Oreland 2009-03-13 ndb - bug#43108 - redo DblqhProxy handling of LCP
[13 Mar 9:18]
Bugs System
Pushed into 5.1.32-ndb-7.0.4 (revid:jonas@mysql.com-20090313081433-xri9mdj8hb2dd6pt) (version source revid:jonas@mysql.com-20090313074942-56mp5oyxwurwx0t9) (merge vers: 5.1.32-ndb-7.0.4) (pib:6)
[14 Mar 13:42]
Jon Stephens
Documented bugfix in the NDB-7.0.4 changelog as follows:
It was not possible to add new data nodes to the cluster online
using multi-threaded data node processes (ndbmtd).
Also noted in "Adding MySQL Cluster Data Nodes Online".
