ndb - bug#43108 - part I - remove LocalProxy::Node, send LCP_*_REP using local DIH instead